--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "json-server -p3001 --watch db.json",
     "build": "webpack",
     "dev": "webpack --watch",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "MIT",
@@ -23,6 +23,7 @@
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
     "typescript": "^5.3.3",
+    "vitest": "^1.3.1",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
